# vector-database

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  Makefile  README.md  api_vectors.db  requirements.txt  text_vectors.db
benchmarks/: insertion_benchmark.cpp  quick_simd_test.cpp  search_benchmark.cpp  simd_benchmark.cpp
examples/: advanced_features.cpp  api_client_demo.cpp  api_client_demo.py  basic_usage.cpp  metadata_search.cpp
include/: vector_database.hpp
src/algorithms/: approximate_nn.cpp  approximate_nn.hpp  hnsw_index.cpp  hnsw_index.hpp  lsh_index.cpp  lsh_index.hpp
src/api/: main.cpp  vector_db_server.cpp  vector_db_server.hpp
src/core/: kd_tree.cpp  kd_tree.hpp  vector.cpp  vector.hpp  vector_database.cpp  vector_database.hpp
src/features/: atomic_batch_insert.cpp  atomic_batch_insert.hpp  atomic_file_writer.cpp  atomic_file_writer.hpp  atomic_persistence.cpp  atomic_persistence.hpp  commit_log.cpp  commit_log.hpp  dimensionality_reduction.cpp  dimensionality_reduction.hpp  persistence.cpp  persistence.hpp  query_cache.cpp  query_cache.hpp  recovery_state_machine.cpp  recovery_state_machine.hpp
src/optimizations/: gpu_operations.hpp  gpu_operations.mm  parallel_processing.cpp  parallel_processing.hpp  simd_operations.cpp  simd_operations.hpp
src/optimizations/shaders/: vector_ops.metal
src/utils/: distance_metrics.cpp  distance_metrics.hpp  random_generator.cpp  random_generator.hpp
test/: add.sh  benchmark_gpu.cpp  insert_batch.sh  test_algorithm_api.py  test_algorithm_quick.sh  test_distance_metrics_api.py  test_gpu.sh  test_query_cache_api.py  test_simd_api.py
